      AuthDirRejectUnlisted and then receives a descriptor from an
      unlisted router (reported by seeess).
    - Fix a bug on the Windows implementation of tor_mmap_file that
      would prevent the cached-routers file from ever loading. (reported by
      John Kimble.)

  o Security bugfixes:
    - Do not log introduction points for hidden services if SafeLogging
      is set.

  o Controller bugfixes:
    - Report the circuit number correctly in STREAM CLOSED events. (Bug
      reported by Mike Perry.)


Changes in version 0.1.2.4-alpha - 2006-12-03
  o Major features:
    - Add support for using natd; this allows FreeBSDs earlier than
      5.1.2 to have ipfw send connections through Tor without using
      SOCKS. (Patch from Zajcev Evgeny with tweaks from tup.)

  o Minor features:
    - Make all connections to addresses of the form ".noconnect"
      immediately get closed. This lets application/controller combos
      successfully test whether they're talking to the same Tor by
      watching for STREAM events.
    - Make cross.sh cross-compilation script work even when autogen.sh
      hasn't been run. (Patch from Michael Mohr.)
    - Statistics dumped by -USR2 now include a breakdown of public key
      operations, for profiling.

  o Major bugfixes:
    - Fix a major leak when directory authorities parse their
      approved-routers list, a minor memory leak when we fail to pick
      an exit node, and a few rare leaks on errors.
    - Handle TransPort connections even when the server sends data before
      the client sends data. Previously, the connection would just hang
      until the client sent data. (Patch from tup based on patch from
      Zajcev Evgeny.)
    - Avoid assert failure when our cached-routers file is empty on
      startup.

  o Minor bugfixes:
    - Don't log spurious warnings when we see a circuit close reason we
      don't recognize; it's probably just from a newer version of Tor.